# TIN-Remote-Access-Manager

./: .gitignore  CMakeLists.txt  README.md
.ssl/: cert.pem
Client/: CMakeLists.txt
Client/.ssl/: cert.pem  key.pem
Client/src/: Client.cpp  Client.h  main.cpp
ClientApp/: CMakeLists.txt
ClientApp/.ssl/: cert.pem  clientCert.pem  clientKey.pem
ClientApp/src/: Client.cpp  Client.h  cacert.pem  main.cpp
HTTPServer/: index.html  server.pem  server.py
ServerApp/: CMakeLists.txt  RunServer.sh  installPoco.sh  regUsr.py
ServerApp/.ssl/: cert.pem  key.pem  serverKey.pem
ServerApp/.ssl/ca/newcerts/: 01.pem~
ServerApp/Debug/: ServerApp
ServerApp/HTTPServer/: reservations.html  server.py
ServerApp/src/: Exception.cpp  Exception.h  FileController.cpp  FileController.h  FilesPaths.cpp  FilesPaths.h  HTTPSRequestHandler.cpp  HTTPSRequestHandler.h  HTTPServer.cpp  HTTPServer.h  HTTPServerFacade.cpp  HTTPServerFacade.h  HTTPSession.cpp  HTTPSession.h  IptablesController.cpp  IptablesController.h  Makefile  RequestHandlerFactory.cpp  RequestHandlerFactory.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp  server
ServerApp/src/config/: build_default.ini  clients  machine  reservations
ServerApp/src/html/: index.html  reservations.html
Shared/: Message.cpp  Message.h
src/: Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
utils/: key.pem
